<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <POU Name="AzimuthControl" Id="{8e08648a-b748-4448-9dcc-aa13dfcf6a06}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM AzimuthControl
VAR_INPUT
	left:	BOOL;
	right: BOOL;
	reset: BOOL;
	enable :  BOOL;
	position: LREAL;
END_VAR

VAR
	AzimuthUnlock:	RS;
	AzimuthDelay:	TON;
	AzimuthAxis:	FB_Axis2;
	error: 			BOOL;
	ErrorID:		UDINT;
	act_position:	LREAL;
	AzimuthAxisEvent: FB_EventLog;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[AzimuthUnlock(SET := enable,
			RESET1 := reset OR StopDone,
			Q1 => GVL_Telescope.focus_lock);
// wait until the focus is unlocked for n milliseconds
AzimuthDelay(IN :=AzimuthUnlock.Q1, PT := T#500MS);


AzimuthAxis(	
	Enable := 			TelescopeControl.power AND Main.power_OK,
	Reset := 			reset,
	Position := 		position, 
	Enable_Positive := 	GVL_Telescope.azimut_limit_switch,
	Enable_Negative := 	GVL_Telescope.azimut_limit_switch,
	Jog_Forward :=		left,
	Jog_Backwards := 	right,
	ActualPosition => 	act_position,
	Error => 			error,
	ErrorID => 			ErrorID,
	AxisRef :=			GVL_Telescope.AzimuthAxisRef);

AzimuthAxisEvent(	
	Trigger := 		Error, 
	Level := 		ADSLOG_MSGTYPE_ERROR,
	FormatString :=	'Azimuth Axis Error: %s',
	OnMessage := 	UDINT_TO_STRING(ErrorID),
	OffMEssage := 	'OK');
				]]></ST>
    </Implementation>
    <LineIds Name="AzimuthControl">
      <LineId Id="116" Count="4" />
      <LineId Id="114" Count="1" />
      <LineId Id="33" Count="0" />
      <LineId Id="108" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="104" Count="3" />
      <LineId Id="38" Count="0" />
      <LineId Id="40" Count="0" />
      <LineId Id="85" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="78" Count="1" />
      <LineId Id="109" Count="0" />
      <LineId Id="80" Count="3" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>